# Kirigami-Devcontainer

./: .gitattributes  CMakeLists.txt  README.md  initialize_repository.py  org.kde.kirigamitemplate.desktop  org.kde.kirigamitemplate.json  org.kde.kirigamitemplate.metainfo.xml  org.kde.newproject.desktop  org.kde.newproject.json  org.kde.newproject.metainfo.xml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/wayland/: devcontainer.json
src/: CMakeLists.txt  kirigamitemplateconfig.kcfgc  main.cpp  newprojectconfig.kcfgc
src/contents/ui/: Main.qml
